# Prediction-trading

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Code_Review.md  HEARTBEAT.md  INCIDENT_LOG.md  OPS_GEOBLOCK_RUNBOOK.md  OPS_RUNBOOK.md  PRODUCT_SPEC.md  PRODUCT_SPEC_v2.md  PROGRESS_ROADMAP.md  README.md  ROADMAP.md  SETUP_INSTRUCTIONS.md  USER_GUIDE.md  dashboard_server.py  execution_control.py  execution_control_client.py  initial_market_scanner.py  layer1_runner.py  layer3_runner.py  layer4_runner.py  live_trading.py  live_trading_engine.py  main.py  monitor_rust_ops.bat  orderbook_depth.py  paper_trading.py  paper_trading_complete.py  postponement_detector.py  requirements.txt  resolution_validator.py  start_all.sh  state_db.py  test_clob_connect.py  trading_engine.py  websocket_manager.py
arbitrage_math/: arbitrage_engine.py
archive/: layer2_runner.py  layer3_runner.py  layer4_runner.py  setup.ps1
archive/scripts_legacy/: check_ws_bridge.sh  mode.sh  monitor.bat  sync.sh  test_ws_import.sh
clob_test/: Cargo.toml
clob_test/src/: clob_client.rs  config.rs  dedup.rs  fill_tracker.rs  ipc.rs  lib.rs  orchestrate.rs  report.rs
clob_test/src/tests/: d1_deposit.rs  d2_submit_cancel.rs  d3_micro_fill.rs  d4_neg_risk.rs  d5_multi_leg.rs  d6_cold_start.rs  d7_circuit_breaker.rs  d8_closeout.rs  d9_partial_fill.rs  mod.rs
config/: config.yaml  prompts.yaml
config/instances/: live-d.yaml  shadow-a.yaml  shadow-b.yaml  shadow-c.yaml  shadow-d.yaml  shadow-e.yaml  shadow-f.yaml
constraint_detection/: constraint_detector.py
docs/: Code_Review_02.md  F_PRE_BACKFILL_PLAN.md  PRODUCT_SPEC.md  PROGRESS_ROADMAP.md  PT_vs_NautilusTrader_Assessment_v2.docx
docs/forensics/: inc019_pre_wipe_20260427_103322Z.txt
layer1_market_data/: market_data.py  market_data_fixed.py
layer3_arbitrage_math/: arbitrage_engine.py
layer4_execution/: execution_engine.py
market_data/: market_data.py
rust_arb/: Cargo.toml  pyproject.toml
rust_arb/src/: lib.rs
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: accounting.rs  api_drift_monitor.rs  arb.rs  book.rs  cached_db.rs  circuit_breaker.rs  dashboard.rs  detect.rs  eval.rs  executor.rs  fill_confirmation.rs  fill_quality.rs  gamma_freshness.rs  gas_monitor.rs  http_client.rs  instrument.rs  latency.rs  lib.rs  monitor.rs  notify.rs  position.rs  postponement.rs  queue.rs  rate_limiter.rs  reconciliation.rs  resolution.rs  scanner.rs  signing.rs  sports_ws.rs  state.rs  strategy_tracker.rs  telegram_kill.rs  types.rs  usdc_monitor.rs  ws.rs  ws_pool.rs  ws_tier_b.rs  ws_tier_c.rs  ws_tiered.rs  ws_user.rs
rust_engine/static/: dashboard.html
rust_supervisor/: Cargo.toml
rust_supervisor/src/: main.rs  orchestrator.rs
scripts/: ACTIVATE_LIVE.sh  GO_LIVE.sh  RESTART_TRADER.bat  START_TRADER.bat  START_TRADER_HIDDEN.vbs  START_TRADER_SILENT.bat  STOP_LIVE.sh  STOP_TRADER.bat  accounting.py  analyze_ws.py  check_ws_log.sh  chk_state_return.sh  clean_start.sh  cleanup.sh  cloud_init_oracle.sh  cloud_init_oracle_v2.sh  deploy_shadows.sh  emergency_stop.sh  enable_shadow.sh  exec_claim.sh  fix_proactive_exits.py  full_reset.py  geoblock_check.sh  health_check.sh  kill.sh  list_wsl_trader.sh  merge_live_d.py  mode.sh  monitor_positions.ps1  monitor_rust_ops.bat  mount_wsl_p.bat  oci_retry_create.sh  push_roadmap.sh  reset.py  reset_state.py  restart.sh  restart_all.sh  restart_dash.sh  setup-dublin-vps.sh  setup_remote_vps.sh  (+14 more)
scripts/ops/: README.md  pt-safe-reboot.service  pt-safe-reboot.sh  pt-safe-reboot.timer  pt-service-wrapper.sh  wrap_usdce_to_pusd.py
scripts/systemd/: prediction-trader@.service
trading/: live_trading.py  orderbook_depth.py  paper_trading.py  trading_engine.py  websocket_manager.py
utilities/: dashboard_server.py  initial_market_scanner.py  resolution_validator.py  rust_state_adapter.py  state_db.py  state_store.py
