[package]
name = "rust_engine"
version = "0.14.7"
edition = "2021"
description = "Core trading engine: WS, book mirror, arb math, positions, dashboard"

[lib]
name = "rust_engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rusqlite = { version = "0.38", features = ["bundled", "backup"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
chrono = "0.4"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_yaml_ng = "0.9"
secrecy = "0.10"
sysinfo = "0.33"
# EIP-712 signing & crypto (B2.0)
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
hex = "0.4"
rand = "0.8"
# L2 HMAC auth for CLOB API (Milestone D)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
