[package]
name = "prediction-trader"
version = "0.5.3"
edition = "2021"
description = "Supervisor binary for prediction market trading system"

[[bin]]
name = "prediction-trader"
path = "src/main.rs"

[dependencies]
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
nix = { version = "0.30", features = ["signal", "process"] }
